fix: align description field with label

--- a/wp-content/themes/chassesautresor/assets/css/edition.css
+++ b/wp-content/themes/chassesautresor/assets/css/edition.css
@@ -843,7 +843,7 @@ li.ligne-logo .champ-modifier {
 .resume-infos li.champ-description,
 .resume-infos li.champ-wysiwyg {
   display: flex;
-  align-items: flex-start;
+  align-items: baseline;
   gap: 0.5rem;
 }
 
